# active_learning_tutorial

./: .gitignore  README.md  challenges.py  pyproject.toml  run_clustering.py  section1_tutorial.py  submit_challenges.ipynb  submit_challenges.sh  submit_clustering.sh  submit_hyak.sh  tutorial.py
figures/tutorials/: tutorial.csv  tutorial.nc
slurm/: 17927682.err  17927682.out  17927692.err  17927692.out  17927766.err  17927766.out
tutlib/: VirtualInstrument.py  __init__.py  actively_learn.py
tutlib/instruments/: challenge3.py
