[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tutlib"
version = "0.0.1"

requires-python = ">=3.9"

dependencies = [
    "pip",
    "numpy",
    "xarray",
    "netcdf4",
    "pandas ",
    "scipy",
    "matplotlib",
    "seaborn",
    "mpltern",
    "scikit-learn",
    "tqdm",
    "sasmodels",
    "shapely",
    "ipywidgets>=7.0.0",
    "nbformat>=4.2.0"
]

[tool.setuptools]
packages = ["tutlib"]
